<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="350dp"
        android:layout_height="650dp"
        android:background="@drawable/rounded_back_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/middle_nameTf"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/middle_name"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.128" />

        <EditText
            android:id="@+id/last_nameTf"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/last_name"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.225" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:hint="Маил"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />

        <Button
            android:id="@+id/enterBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:onClick="login"
            android:text="@string/sing_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.833" />

        <EditText
            android:id="@+id/nameTf"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/person_name"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.026" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/phone"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:inputType="phone"
            android:maxLength="15"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />

        <EditText
            android:id="@+id/date"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/date_of_birth"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.421" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:ems="25"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.615" />

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:ems="25"
            android:hint="@string/repeat_pass"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.711" />

        <CheckBox
            android:id="@+id/private_police"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_policy_text"
            android:textColor="@color/color_in_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77" />

        <ImageButton
            android:id="@+id/eye_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_text_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.927"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.611"
            app:srcCompat="@drawable/eye" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />


</androidx.constraintlayout.widget.ConstraintLayout>